--- a/game/block-blast.html
+++ b/game/block-blast.html
@@ -836,7 +836,7 @@
                     <div class="col-12">
                         <div class="footer-bottom-inn">
                             <div class="footer-logo">
-                                <a href="index.html">
+                                <a href="../index.html">
                                     <img src="../assets/img/logo/logo.png" alt="site logo" style="width: 150px; height: auto;"/>FAF Games
                                 </a>
                             </div>
