--- a/game/block-blast.html
+++ b/game/block-blast.html
@@ -841,7 +841,7 @@
                         <div class="footer-bottom-inn">
                             <div class="footer-logo">
                                 <a href="../index.html">
-                                    <img src="../assets/img/logo/logo.png" alt="site logo" style="width: 150px; height: auto;"/>FAF Games
+                                    <img src="../assets/img/logo/logo.png" alt="site logo" style="width: 150px; height: auto;"/>
                                 </a>
                             </div>
                             <div class="footer-social">
