--- a/game/block-blast.html
+++ b/game/block-blast.html
@@ -5,14 +5,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="robots" content="index, follow">
-        <title>Block Blast Unblocked: Play Now for Free on FAF Games</title>
-        <meta name="description" content="
-        
-        <meta name="keywords" content="
+        <title>Block Blast Unblocked: Play Block Blast At 76 Unblocked Games</title>
+       <!-- Meta Description -->
+<meta name="description" content="Play Block Blast, a fast-paced and addictive puzzle game that challenges your brain with fun and strategic block moves.">
+
+<!-- Meta Keywords -->
+<meta name="keywords" content="Block Blast, puzzle game, block puzzle, brain game, strategy game, mobile game, fun puzzle">
         <meta name="news_keywords" content="
-        <meta name="author" content="FAF Games Team">
-       <link rel="canonical" href="/game/block-blast.html" />
-        <meta name="publisher" content="FAF Games Team">
+        <meta name="author" content="76 Unblocked Games">
+       <link rel="canonical" href="https://76-unblockedgames.github.io/game/block-blast.html" />
+        <meta name="publisher" content="76 Unblocked Games">
         <!-- Favicon -->
         <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
         <!--Bootstrap css-->
@@ -292,7 +294,7 @@
         <!-- Header Area Start -->
         <nav class="fag-header navbar navbar-expand-lg">
           <div class="container">
-              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="FAF Games" / style="width: 80px; height: auto;"></a>
+              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="76 Unblocked Games" / style="width: 80px; height: auto;"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="menu-toggle"></span>
               </button>
@@ -803,7 +805,7 @@
                     <div class="col-lg-6 col-md-6 col-sm-12">
                         <div class="single-footer1">
                             <h3>About us</h3>
-                <p class="footer-text-color">Welcome to FAF Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join FAF Games today and start playing!</p>
+                <p class="footer-text-color">Welcome to 76 Unblocked Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join 76 Unblocked Games today and start playing!</p>
                         </div>
                     </div>
 					<div class="col-lg-3">
