--- a/game/block-blast.html
+++ b/game/block-blast.html
@@ -283,6 +283,38 @@
             }
             
         </style>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "VideoGame",
+  "name": "Block Blast",
+  "description": "Play Block Blast, a fast-paced and addictive puzzle game that challenges your brain with fun and strategic block moves.",
+  "genre": ["Puzzle", "Block Game"],
+  "publisher": {
+    "@type": "Organization",
+    "name": "76 Unblocked Games"
+  },
+  "image": "https://76-unblockedgames.github.io/assets/img/blockblast/block-blast.webp",
+  "operatingSystem": "Any web browser",
+  "applicationCategory": "Game",
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": 4.5,
+    "bestRating": 5,
+    "reviewCount": 1200
+  },
+  "offers": {
+    "@type": "Offer",
+    "price": "0",
+    "priceCurrency": "USD"
+  },
+  "author": {
+    "@type": "Organization",
+    "name": "76 Unblocked Games"
+  }
+}
+</script>
+
        </head>
        <body>
            
